--- a/data/gameApp.json
+++ b/data/gameApp.json
@@ -1,8 +1,11 @@
 {
-    "inventory": [],
+    "inventory": [
+        {"item num": 2},
+        {"item num": 1}
+    ],
     "user": {
-        "name": "asd",
-        "progress": 0,
-        "health": 60
+        "name": "agaf",
+        "progress": 40,
+        "health": 30
     }
 }
