Added relevant pictures. Basic structure of game working - still some bugs to work out. Also currently methods are way too long-need to refactor those

--- a/data/gameApp.json
+++ b/data/gameApp.json
@@ -1,11 +1,8 @@
 {
-    "inventory": [
-        {"item num": 2},
-        {"item num": 1}
-    ],
+    "inventory": [{"item num": 5}],
     "user": {
-        "name": "agaf",
-        "progress": 40,
-        "health": 30
+        "name": "jjj",
+        "progress": 0,
+        "health": 100
     }
 }
