--- a/data/gameApp.json
+++ b/data/gameApp.json
@@ -1,8 +1,11 @@
 {
-    "inventory": [{"item num": 5}],
+    "inventory": [
+        {"item num": 2},
+        {"item num": 5}
+    ],
     "user": {
-        "name": "jjj",
-        "progress": 0,
-        "health": 100
+        "name": "h",
+        "progress": 70,
+        "health": 65
     }
 }
